--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,14 +1,14 @@
 name: oauth1
-version: 2.0.0
+version: 2.1.0
 description: "\"RFC 5849: The OAuth 1.0 Protocol\" client implementation for Dart."
 homepage: https://github.com/nbspou/dart-oauth1
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
+  sdk: '>=2.12.0 <4.0.0'
 
 dependencies:
   crypto: ^3.0.0
-  http: ^0.13.0
+  http: '>=0.13.0 <2.0.0'
 
 dev_dependencies:
   test: ^1.16.5
