--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,6 +2,13 @@ name: oauth1
 version: 2.1.0
 description: "\"RFC 5849: The OAuth 1.0 Protocol\" client implementation for Dart."
 homepage: https://github.com/nbspou/dart-oauth1
+repository: https://github.com/nbspou/dart-oauth1
+issue_tracker: https://github.com/nbspou/dart-oauth1/issues
+topics:
+  - authentication
+  - network
+  - oauth
+  - web
 
 environment:
   sdk: '>=2.12.0 <4.0.0'
